# LEARNIX-school-system

./: Learnix.spec  README.md  addis_ababa_dashboard.py  admin_dashboard.py  cruise.jfif  dashboard.py  debug_grey.py  fix_colors.py  fix_icons.py  fix_manual.py  fix_views.py  future.jfif  kifle_ketema_dashboard.py  main.py  omega.jfif  pro.py  pyproject.toml  requirements.txt  schoolof.jfif  south_west.jfif  test_css.py  wereda_dashboard.py
